--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
     
+    <section>
+        <div class="container flex">
+            <h2>Ommabop yangiliklar</h2>
+            <hr>
+            <a href="#">Barchasi <span><img src="img/arrow-right.svg" alt=""></span></a>
+        </div>
+    </section>
 
     <script src="https://cdn.tailwindcss.com"></script>
 </body>
