--- a/index.html
+++ b/index.html
@@ -1,14 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="tailwind.config.js">
 </head>
+
 <body>
-    
+
+    <h1 class="text-brandRed">asd;ifj</h1>
 
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <script>
+        tailwind.config = {
+            theme: {
+                extend: {
+                    colors: {
+                        'brandRed': '#DD3333',
+                        'darkBlue': '#283648',
+                        'mainblack': '#171717',
+                        'mainwhite': '#FFFFFF',
+                        'secondaryblack': '#272828',
+                        'gray0': '#697583',
+                        'gray1': '#A4B0BE',
+                        'gray2': '#E1E3E6',
+                        'gray3': '#F4F4F4',
+                        'bgcolor': '#FAFAFA',
+                    },
+                }
+            }
+        }
+    </script>
 </body>
+
 </html>
