--- a/index.html
+++ b/index.html
@@ -6,12 +6,207 @@
     <title>Hudud24</title>
 </head>
 
-<body>
-
-
-
-
-
+<body class="bg-neutral-50">
+    <div class="justify-center  flex flex-col px-16 py-12 container">
+        <div class="flex w-full flex-col my-3.5 ">
+            <div class="flex gap-3">
+                <div class="bg-brandRed self-center flex w-8 shrink-0 h-8 flex-col my-auto"></div>
+                <div class="text-darkBlue text-4xl font-bold leading-10 self-stretch grow shrink basis-auto">
+                    #NoComment
+                </div>
+                <div class="bg-zinc-200 self-center flex w-[765px] shrink-0 max-w-full h-px flex-col my-auto"></div>
+                <div class="justify-center items-center backdrop-blur-[15px] self-center flex gap-1 my-auto rounded-xl">
+                    <div class="text-gray0 text-right text-base font-semibold grow whitespace-nowrap my-auto">
+                        Barchasi ->
+                    </div>
+                </div>
+            </div>
+            <div class="mt-8">
+                <div class="gap-5 flex max-md:flex-col">
+                    <div class="flex flex-col  w-3/12 max-md:w-full ">
+                        <div class="border flex grow flex-col justify-center  w-full  border-white border-opacity-20 max-md:mt-6">
+                            <div class="flex-col overflow-hidden relative flex aspect-[0.7574931880108992] justify-center items-stretch">
+                                <img src="images/nocomment1.png"
+                                    class="absolute h-full w-full object-cover object-center inset-0" />
+                                <div class="relative flex w-full flex-col items-stretch pt-24 pb-6 px-6 ">
+                                    <div class="text-white text-xl font-bold leading-7 mt-52">
+                                        Sportchimiz raqiblariga imkoniyat qoldirmadi!
+                                    </div>
+                                    <div
+                                        class=" border backdrop-blur-[15px] bg-white bg-opacity-10 flex gap-1 mt-3 px-4 py-1 rounded-3xl  border-white border-opacity-10">
+                                        <img loading="lazy"
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/4997e03534f1e18bd8e5e8961dd931d0fb4d63e6fc6da510d1711cdfabeee67c?"
+                                            class="aspect-square object-contain object-center  overflow-hidden shrink-0 max-w-full" />
+                                        <div class="text-white text-xs font-medium leading-4  ">
+                                            8-oktabr 2023
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-stretch w-3/12 max-md:w-full ">
+                        <div class="border flex grow flex-col justify-center items-stretch w-full   border-white border-opacity-20 max-md:mt-6">
+                            <div class="flex-col overflow-hidden relative flex aspect-[0.7574931880108992] w-full justify-center items-stretch">
+                                <img src="images/nocomment8.png"
+                                    class="absolute h-full w-full object-cover object-center inset-0" />
+                                <div class="relative flex w-full flex-col items-stretch pt-24 pb-6 px-6">
+                                    <div class="text-white text-xl font-bold leading-7 mt-52 ">
+                                        Sportchimiz raqiblariga imkoniyat qoldirmadi!
+                                    </div>
+                                    <div
+                                        class=" items-stretch border backdrop-blur-[15px] bg-white bg-opacity-10 flex gap-1 mt-3 px-4 py-1 rounded-3xl   border-white border-opacity-10">
+                                        <img loading="lazy"
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/4997e03534f1e18bd8e5e8961dd931d0fb4d63e6fc6da510d1711cdfabeee67c?"
+                                            class="aspect-square object-contain object-center w-4 overflow-hidden shrink-0 max-w-full" />
+                                        <div class="text-white text-xs font-medium ">
+                                            8-oktabr 2023
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-stretch w-3/12 max-md:w-full max-md:ml-0">
+                        <div class="border flex grow flex-col justify-center items-stretch w-full   border-white border-opacity-20 max-md:mt-6">
+                            <div class="flex-col overflow-hidden relative flex aspect-[0.7574931880108992] w-full justify-center items-stretch">
+                                <img src="images/nocomment2.png"
+                                    class="absolute h-full w-full object-cover object-center inset-0" />
+                                <div class="relative flex w-full flex-col items-stretch pt-24 pb-6 px-6 ">
+                                    <div class="text-white text-xl font-bold leading-7 mt-52 ">
+                                        Sportchimiz raqiblariga imkoniyat qoldirmadi!
+                                    </div>
+                                    <div
+                                        class="items-stretch border backdrop-blur-[15px] bg-white bg-opacity-10 flex gap-1 mt-3 px-4 py-1 rounded-3xl   border-white border-opacity-10">
+                                        <img loading="lazy"
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/4997e03534f1e18bd8e5e8961dd931d0fb4d63e6fc6da510d1711cdfabeee67c?"
+                                            class="aspect-square object-contain object-center w-4 overflow-hidden shrink-0 max-w-full" />
+                                        <div class="text-white text-xs font-medium leading-4">
+                                            8-oktabr 2023
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                                        <div class="flex flex-col items-stretch w-3/12 max-md:w-full max-md:ml-0">
+                        <div class="border flex grow flex-col justify-center items-stretch w-full   border-white border-opacity-20 max-md:mt-6">
+                            <div class="flex-col overflow-hidden relative flex aspect-[0.7574931880108992] w-full justify-center items-stretch">
+                                <img src="images/nocomment3.png"
+                                    class="absolute h-full w-full object-cover object-center inset-0" />
+                                <div class="relative flex w-full flex-col items-stretch pt-24 pb-6 px-6 max-md:px-5">
+                                    <div class="text-white text-xl font-bold leading-7 mt-52 max-md:mt-10">
+                                        Sportchimiz raqiblariga imkoniyat qoldirmadi!
+                                    </div>
+                                    <div
+                                        class="items-stretch border backdrop-blur-[15px] bg-white bg-opacity-10 flex gap-1 mt-3 px-4 py-1 rounded-3xl   border-white border-opacity-10">
+                                        <img loading="lazy"
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/4997e03534f1e18bd8e5e8961dd931d0fb4d63e6fc6da510d1711cdfabeee67c?"
+                                            class="aspect-square object-contain object-center w-4 overflow-hidden shrink-0 max-w-full" />
+                                        <div class="text-white text-xs font-medium leading-4">
+                                            8-oktabr 2023
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="mt-6 ">
+                <div class="gap-5 flex ">
+                    <div class="flex flex-col items-stretch w-3/12  ">
+                        <div class="border flex grow flex-col justify-center items-stretch w-full   border-white border-opacity-20 max-md:mt-6">
+                            <div class="flex-col overflow-hidden relative flex aspect-[0.7574931880108992] w-full justify-center items-stretch">
+                                <img src="images/nocomment4.png"
+                                    class="absolute h-full w-full object-cover object-center inset-0" />
+                                <div class="relative flex w-full flex-col items-stretch pt-24 pb-6 px-6 ">
+                                    <div class="text-white text-xl font-bold leading-7 mt-52 ">
+                                        Sportchimiz raqiblariga imkoniyat qoldirmadi!
+                                    </div>
+                                    <div
+                                        class=" items-stretch border backdrop-blur-[15px] bg-white bg-opacity-10 flex gap-1 mt-3 px-4 py-1 rounded-3xl   border-white border-opacity-10">
+                                        <img loading="lazy"
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/4997e03534f1e18bd8e5e8961dd931d0fb4d63e6fc6da510d1711cdfabeee67c?"
+                                            class="aspect-square object-contain object-center w-4 overflow-hidden shrink-0 max-w-full" />
+                                        <div class="text-white text-xs font-medium leading-4">
+                                            8-oktabr 2023
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-stretch w-3/12 ">
+                        <div class="border flex grow flex-col justify-center items-stretch w-full   border-white border-opacity-20 max-md:mt-6">
+                            <div class="flex-col overflow-hidden relative flex aspect-[0.7574931880108992] w-full justify-center items-stretch">
+                                <img src="images/nocomment5.png"
+                                    class="absolute h-full w-full object-cover object-center inset-0" />
+                                <div class="relative flex w-full flex-col items-stretch pt-24 pb-6 px-6 ">
+                                    <div class="text-white text-xl font-bold leading-7 mt-52 ">
+                                        Sportchimiz raqiblariga imkoniyat qoldirmadi!
+                                    </div>
+                                    <div
+                                        class="items-stretch border backdrop-blur-[15px] bg-white bg-opacity-10 flex gap-1 mt-3 px-4 py-1 rounded-3xl   border-white border-opacity-10">
+                                        <img loading="lazy"
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/4997e03534f1e18bd8e5e8961dd931d0fb4d63e6fc6da510d1711cdfabeee67c?"
+                                            class="aspect-square object-contain object-center w-4 overflow-hidden shrink-0 max-w-full" />
+                                        <div class="text-white text-xs font-medium leading-4">
+                                            8-oktabr 2023
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-stretch w-3/12 max-md:w-full max-md:ml-0">
+                        <div class="border flex grow flex-col justify-center items-stretch w-full   border-white border-opacity-20 max-md:mt-6">
+                            <div class="flex-col overflow-hidden relative flex aspect-[0.7574931880108992] w-full justify-center items-stretch">
+                                <img src="images/nocomment6.png"
+                                    class="absolute h-full w-full object-cover object-center inset-0" />
+                                <div class="relative flex w-full flex-col items-stretch pt-24 pb-6 px-6 ">
+                                    <div class="text-white text-xl font-bold leading-7 mt-52 ">
+                                        Sportchimiz raqiblariga imkoniyat qoldirmadi!
+                                    </div>
+                                    <div
+                                        class=" items-stretch border backdrop-blur-[15px] bg-white bg-opacity-10 flex gap-1 mt-3 px-4 py-1 rounded-3xl   border-white border-opacity-10">
+                                        <img loading="lazy"
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/4997e03534f1e18bd8e5e8961dd931d0fb4d63e6fc6da510d1711cdfabeee67c?"
+                                            class="aspect-square object-contain object-center w-4 overflow-hidden shrink-0 max-w-full" />
+                                        <div class="text-white text-xs font-medium leading-4">
+                                            8-oktabr 2023
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="flex flex-col items-stretch w-3/12">
+                        <div class="border flex grow flex-col justify-center items-stretch w-full   border-white border-opacity-20 max-md:mt-6">
+                            <div class="flex-col overflow-hidden relative flex aspect-[0.7574931880108992] w-full justify-center items-stretch">
+                                <img src="images/nocomment7.png"
+                                    class="absolute h-full w-full object-cover object-center inset-0" />
+                                <div class="relative flex w-full flex-col items-stretch pt-24 pb-6 px-6 max-md:px-5">
+                                    <div class="text-white text-xl font-bold leading-7 mt-52">
+                                        Sportchimiz raqiblariga imkoniyat qoldirmadi!
+                                    </div>
+                                    <div
+                                        class=" items-stretch border backdrop-blur-[15px] bg-white bg-opacity-10 flex gap-1 mt-3 px-4 py-1 rounded-3xl   border-white border-opacity-10">
+                                        <img loading="lazy"
+                                            src="https://cdn.builder.io/api/v1/image/assets/TEMP/4997e03534f1e18bd8e5e8961dd931d0fb4d63e6fc6da510d1711cdfabeee67c?"
+                                            class="aspect-square object-contain object-center w-4 overflow-hidden shrink-0 max-w-full" />
+                                        <div class="text-white text-xs font-medium leading-4">
+                                            8-oktabr 2023
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
     <script src="https://cdn.tailwindcss.com"></script>
     <script>
         tailwind.config = {
